--- a/src/pages/care-plan/su-pre.html
+++ b/src/pages/care-plan/su-pre.html
@@ -25,6 +25,7 @@
     <media-queries
       dimensions="{{dimensions}}">
     </media-queries>
+
     <firebase-document
       id="assmtDB"
       path="/homes/[[home]]/patients/[[patient]]/preAdmissionAssessment"
@@ -193,46 +194,57 @@
     Polymer({
 
       is: 'su-pre',
-      ready:function(){
-        this.fire("pageLoaded", {page:this.page});
+
+      ready: function() {
+        this.fire("pageLoaded", {page: this.page});
         this.addEventListener("print", this.print);
       },
-      properties:{
-        page:{
-          type:String,
-        },
-        patient:{
-          type:String,
-        },
-        home:{
-          type:String,
-        }
-      },
-      observers:[
 
-      ],
-      behaviors:[
+      properties: {
+
+        page: {
+          type: String,
+        },
+
+        patient: {
+          type: String,
+        },
+
+        home: {
+          type: String,
+        }
+
+      },
+
+      behaviors: [
         Polymer.carePlanAnimation,
         Polymer.suPrintBehavior,
         Polymer.suResizeBehavior
       ],
-      createNewSection:function(){
-        this.$.customInput.path=null;
-        this.$.customInput.data={};
+
+      createNewSection: function() {
+        this.$.customInput.path = null;
+        this.$.customInput.data = {};
         this.$.customSectionModal.open();
       },
-      saveNewSection:function(){
-        var path="/homes/"+this.home+"/patients/"+this.patient+"/preAdmissionAssessment/custom"
+
+      saveNewSection: function() {
+        var path = "/homes/" + this.home + "/patients/" + this.patient + "/preAdmissionAssessment/custom";
         this.$.customInput.save(path, null)
-          .then(function(){
+          .then(function() {
             this.$.customSectionModal.close();
+            var key = this.$.customInput.path.split("/").pop();
+
+            this.fire("customSectionCreated", {key: key});
           }.bind(this));
       },
-      cancelNewSection:function(){
-        this.$.customInput.path=null;
-        this.$.customInput.data={};
+
+      cancelNewSection: function() {
+        this.$.customInput.path = null;
+        this.$.customInput.data = {};
         this.$.customSectionModal.close();
-      },
+      }
+
     });
 
   </script>
