added more test pages

--- a/test/index.html
+++ b/test/index.html
@@ -21,6 +21,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <body>
     <script>
       WCT.loadSuites([
+        //complete tests
 
         //default page tests
         //'def-error.html?dom=shady',
@@ -29,9 +30,55 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         //'def-account.html?dom=shadow',
         //'def-login.html?dom=shady',
         //'def-login.html?dom=shadow',
-        'def-home.html?dom=shady',
-        'def-home.html?dom=shadow',
+        //'def-home.html?dom=shady',
+        //'def-home.html?dom=shadow',
+        //'su-pre.html?dom=shady',
+        //'su-pre.html?dom=shadow',
+        'su-care.html?dom=shady',
+        'su-care.html?dom=shadow',
+
+        //care-plan page tests
+        //'su-profile.html?dom=shady',
+        //'su-profile.html?dom=shadow',
+        //'su-create.html?dom=shady',
+        //'su-create.html?dom=shadow',
+
+        //'su-care-review-edit-view.html?dom=shady',
+        //'su-care-review-edit-view.html?dom=shadow',
+        //'su-care-review-multi-view.html?dom=shady',
+        //'su-care-review-multi-view.html?dom=shadow',
+        //'su-care-review.html?dom=shady',
+        //'su-care-review.html?dom=shadow',
+
+
         /*
+        //incomplete tests
+
+        //care-plan pages
+        'su-goals-edit-view.html?dom=shady',
+        'su-goals-edit-view.html?dom=shadow',
+        'su-goals-multi-view.html?dom=shady',
+        'su-goals-multi-view.html?dom=shadow',
+        'su-goals.html?dom=shady',
+        'su-goals.html?dom=shadow',
+        'su-medical.html?dom=shady',
+        'su-medical.html?dom=shadow',
+        'su-medication.html?dom=shady',
+        'su-medication.html?dom=shadow',
+        'su-monthly-reports.html?dom=shady',
+        'su-monthly-reports.html?dom=shadow',
+
+        'su-reports.html?dom=shady',
+        'su-reports.html?dom=shadow',
+        'su-risk-edit-view.html?dom=shady',
+        'su-risk-edit-view.html?dom=shadow',
+        'su-risk-multi-view.html?dom=shady',
+        'su-risk-multi-view.html?dom=shadow',
+        'su-risk.html?dom=shady',
+        'su-risk.html?dom=shadow',
+        'su-view-reports.html?dom=shady',
+        'su-view-reports.html?dom=shadow',
+
         //app shell tests
         'my-app.html?dom=shady',
         'my-app.html?dom=shadow',
@@ -65,43 +112,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         'quarterly-manager-report.html?dom=shady',
         'quarterly-manager-report.html?dom=shadow',
 
-        //care-plan pages
-        'su-care-review-edit-view.html?dom=shady',
-        'su-care-review-edit-view.html?dom=shadow',
-        'su-care-review-multi-view.html?dom=shady',
-        'su-care-review-multi-view.html?dom=shadow',
-        'su-care-review.html?dom=shady',
-        'su-care-review.html?dom=shadow',
-        'su-care.html?dom=shady',
-        'su-care.html?dom=shadow',
-        'su-create.html?dom=shady',
-        'su-create.html?dom=shadow',
-        'su-goals-edit-view.html?dom=shady',
-        'su-goals-edit-view.html?dom=shadow',
-        'su-goals-multi-view.html?dom=shady',
-        'su-goals-multi-view.html?dom=shadow',
-        'su-goals.html?dom=shady',
-        'su-goals.html?dom=shadow',
-        'su-medical.html?dom=shady',
-        'su-medical.html?dom=shadow',
-        'su-medication.html?dom=shady',
-        'su-medication.html?dom=shadow',
-        'su-monthly-reports.html?dom=shady',
-        'su-monthly-reports.html?dom=shadow',
-        'su-pre.html?dom=shady',
-        'su-pre.html?dom=shadow',
-        'su-profile.html?dom=shady',
-        'su-profile.html?dom=shadow',
-        'su-reports.html?dom=shady',
-        'su-reports.html?dom=shadow',
-        'su-risk-edit-view.html?dom=shady',
-        'su-risk-edit-view.html?dom=shadow',
-        'su-risk-multi-view.html?dom=shady',
-        'su-risk-multi-view.html?dom=shadow',
-        'su-risk.html?dom=shady',
-        'su-risk.html?dom=shadow',
-        'su-view-reports.html?dom=shady',
-        'su-view-reports.html?dom=shadow',
         */
       ]);
     </script>
